--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,123 @@
           {{ content }}
           
           
-          {{ page.title }} - post
+          {{ page.title }} - 1. Arti mimpi membeli baju terlalu banyak adalah “Menerima uang kembalian itu penting”<br />
+Jika kamu bermimpi membeli terlalu banyak pakaian, itu artinya kamu takut uang kembalian .<br />
+<br />
+Namun, tampaknya ada peluang perubahan di sekitar Anda yang tidak Anda sadari.<br />
+<br />
+Jangan takut akan peluang, jadi jangan takut gagal dan hadapi tantangan.<br />
+<br />
+Itu harus berubah menjadi lebih baik.<br />
+<br />
+<br />
+2. Arti mimpi tidak mempunyai cukup uang untuk membeli baju adalah “Saya tidak positif tentang cinta.”<br />
+Bermimpi tidak mempunyai cukup uang untuk membeli pakaian berarti keberuntungan cinta anda sedang menurun.<br />
+<br />
+Harga diri Anda rendah sekarang, dan Anda mungkin tidak antusias dengan cinta.<br />
+<br />
+Jika memungkinkan, mari kumpulkan pengalaman sukses kecil dan fokus pada peningkatan diri agar Anda bisa percaya diri .<br />
+<br />
+Tindakan positif pasti akan memberi Anda masa depan yang bahagia.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa arti mimpi uang? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+3. Arti mimpi mencoba dan membeli baju adalah “membuat rencana”<br />
+Jika anda bermimpi mencoba dan membeli pakaian, itu menyiratkan bahwa anda harus bertindak secara sistematis.<br />
+<br />
+Anda mungkin sering dipukul dan dirindukan akhir-akhir ini.<br />
+<br />
+Anda mungkin tidak siap, jadi harap tetap tenang dan buat rencana sebelum bertindak .<br />
+<br />
+Dengan begitu, energi Anda akan terbayar.<br />
+<br />
+<br />
+4. Arti mimpi tidak dapat menemukan baju yang anda sukai di toko adalah “Cita-cita anda mungkin terlalu tinggi”.<br />
+Mimpi di mana anda tidak dapat menemukan pakaian yang anda suka di toko adalah tanda bahwa anda terlalu mengejar cita-cita anda.<br />
+<br />
+Anda mungkin sangat berjuang untuk kesempurnaan sehingga Anda tidak dapat menangani kuantitas dan itu tidak membuahkan hasil.<br />
+<br />
+Ini adalah peluang besar, jadi mari kita tetap sadar untuk melakukan nomor itu dengan mantap .<br />
+<br />
+Dengan melakukan kuantitas, pada akhirnya harus menjadi sesuatu yang berkualitas tinggi.<br />
+<br />
+<br />
+5. Arti mimpi memilih dan membeli baju adalah “Penting memiliki rasa tanggung jawab”<br />
+Bermimpi bahwa Anda sedang memilih dan membeli pakaian menyiratkan bahwa Anda kemungkinan besar akan diserahkan kepada orang lain baru-baru ini.<br />
+<br />
+Karena dia tidak mengambil tindakan sendiri, dia mungkin menyalahkan orang yang dia pilih ketika dia melakukan kesalahan.<br />
+<br />
+Jika Anda terus seperti ini, Anda dapat membuat orang di sekitar Anda merasa tidak nyaman, jadi ketahuilah bahwa Anda akan memimpin .<br />
+<br />
+Ini akan membantu Anda menjadi orang yang berpikiran terbuka yang dapat menghapus tanggung jawab orang lain.<br />
+<br />
+1. Arti mimpi membeli baju adalah “Saya peduli dengan mata sekitar”<br />
+Jika kamu bermimpi membeli pakaian, itu artinya kamu tidak peduli dengan apa yang dipikirkan orang lain.<br />
+<br />
+Anda mungkin sadar menekan individualitas dalam diri Anda dan tidak menonjol.<br />
+<br />
+Stres menumpuk ketika Anda selalu gugup.<br />
+<br />
+Jadi hal pertama adalah berhenti membandingkan diri Anda dengan orang lain .<br />
+<br />
+Jika Anda dapat mengekspresikan individualitas Anda tanpa dipengaruhi oleh orang-orang di sekitar Anda, Anda seharusnya dapat menghabiskan hari-hari Anda lebih memuaskan dari sekarang.<br />
+<br />
+<br />
+2. Arti mimpi teman membeli baju adalah "saya ingin menjadi saya yang baru"<br />
+Jika seorang teman membeli pakaian dalam mimpi, itu artinya Anda ingin melakukan makeover.<br />
+<br />
+Karena teman mewakili diri mereka sendiri dalam ramalan mimpi.<br />
+<br />
+Ini adalah kesempatan bagus, jadi mari kita lihat garis keturunan mode yang belum pernah Anda pakai sebelumnya.<br />
+<br />
+Anda juga dapat mencoba mengubah gaya rambut dan rias wajah agar sesuai dengan pakaian Anda .<br />
+<br />
+Maka Anda pasti akan menemukan Anda yang baru.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Arti mimpi di mana seorang teman muncul | Diagnosis implikasi spiritual sesuai dengan situasinya!<br />
+Ketuk untuk bergerak<br />
+<br />
+3. Arti mimpi kekasih membeli pakaian adalah “baik untuk menenangkan diri”.<br />
+Arti mimpi seorang kekasih membeli pakaian adalah bukti bahwa kamu memiliki banyak perasaan terhadap kekasih kamu.<br />
+<br />
+Namun, perasaan Anda mungkin terlalu tinggi dan orang lain mungkin menarik diri.<br />
+<br />
+Untuk mencegah hal ini terjadi, tenangkan diri sekali dan bertindak sambil memastikan perasaan orang lain .<br />
+<br />
+Dengan begitu, Anda akan dapat menghabiskan lebih banyak waktu dengan orang yang Anda cintai.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Arti mimpi kekasih | Diagnosis implikasi spiritual sesuai situasi!<br />
+Ketuk untuk bergerak<br />
+<br />
+4. Arti mimpi orang yang anda sukai membeli baju adalah "orang lain terbuka untuk anda"<br />
+Jika Anda bermimpi seseorang yang Anda sukai membeli pakaian, itu berarti orang lain itu terbuka untuk Anda.<br />
+<br />
+Mereka mungkin menunjukkan sisi baru Anda yang tidak dimiliki orang lain.<br />
+<br />
+Itu pertanda bahwa Anda sedang membangun hubungan saling percaya dengan orang yang Anda cintai .<br />
+<br />
+Secara umum, dapat dikatakan bahwa ini adalah mimpi keberuntungan, jadi mari ambil risiko dan sampaikan perasaan Anda dengan jujur.<br />
+<br />
+Orang yang Anda cintai mungkin sedang menunggu Anda untuk memberi tahu mereka bagaimana perasaan Anda.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Arti mimpi di mana orang yang Anda sukai muncul | Diagnosis implikasi spiritual sesuai dengan situasinya!<br />
+Ketuk untuk bergerak<br />
+<br />
+5. Arti mimpi keluarga membeli baju adalah “lingkungan akan berubah”<br />
+Arti mimpi keluarga kamu membeli pakaian berarti lingkungan keluarga kamu akan berubah.<br />
+<br />
+Pasalnya, pakaian dipilih sesuai TPO.<br />
+<br />
+Perubahan lingkungan keluarga Anda mungkin memerlukan perubahan pakaian.<br />
+<br />
+Jika menyangkut keluarga Anda, Anda mungkin khawatir, tetapi mari kita awasi mereka .<br />
+<br />
+Dengan begitu, saya pikir saya dapat membantu Anda dalam keadaan darurat.
           
           <p>And</p>
         </div>
